--- a/packages/mkhodroo-process-maker/src/Lang/fa/fa.json
+++ b/packages/mkhodroo-process-maker/src/Lang/fa/fa.json
@@ -7,6 +7,7 @@
     "Process Name": "نام فرایند",
     "Status": "وضعیت",
     "Send Date": "تاریخ ارسال",
+    "Send By": "ارسال کننده",
     "Action": "اقدام",
     "Delete": "حذف",
     "DRAFT": "پیش نویس",
