--- a/packages/mkhodroo-process-maker/src/Lang/fa/fa.json
+++ b/packages/mkhodroo-process-maker/src/Lang/fa/fa.json
@@ -8,6 +8,7 @@
     "Status": "وضعیت",
     "Send Date": "تاریخ ارسال",
     "Send By": "ارسال کننده",
+    "Delay": "تاخیر",
     "Action": "اقدام",
     "Delete": "حذف",
     "DRAFT": "پیش نویس",
