--- a/packages/hidro-registration/src/Lang/fa.json
+++ b/packages/hidro-registration/src/Lang/fa.json
@@ -8,5 +8,6 @@
     "simfaCode":"کدسیمفا",
     "Waiting...": "منتظر بمانید...",
     "Authority Does Not Received.": "Authority دریافت نشد با پشتیبانی تماس بگیرید.",
-    "Agency Does Not Found": "مرکز یافت نشد"
+    "Agency Does Not Found": "مرکز یافت نشد",
+    "You Compelete Your Info Before. Please Be Patient. We Call You Soon.": "شما قبلا اطلاعاتتان را تکمیل کرده اید. لطفا منتظر بمانید. بزودی با شما تماس خواهیم گرفت"
 }
