--- a/packages/mkhodroo-agency-info/src/Lang/fa.json
+++ b/packages/mkhodroo-agency-info/src/Lang/fa.json
@@ -111,5 +111,11 @@
     "membership_99": "حق عضویت 99",
     "membership_00": "حق عضویت 00",
     "membership_01": "حق عضویت 01",
-    "membership_02": "حق عضویت 02"
+    "membership_02": "حق عضویت 02",
+    "Debts Info":"اطلاعات بدهی",
+    "Year":"سال",
+    "Price":"مبلغ",
+    "Payment Date":"تاریخ پرداخت",
+    "Payment ref id":"کدرهگیری پرداخت",
+    "Payment file":"رسید پرداخت"
 }
