--- a/packages/mkhodroo-agency-info/src/Lang/fa.json
+++ b/packages/mkhodroo-agency-info/src/Lang/fa.json
@@ -115,7 +115,7 @@
     "Debts Info":"اطلاعات بدهی",
     "Year":"سال",
     "Price":"مبلغ",
-    "Payment Date":"تاریخ پرداخت",
+    "Payment date":"تاریخ پرداخت",
     "Payment ref id":"کدرهگیری پرداخت",
     "Payment file":"رسید پرداخت"
 }
