--- a/packages/mkhodroo-agency-info/src/Lang/fa.json
+++ b/packages/mkhodroo-agency-info/src/Lang/fa.json
@@ -117,5 +117,7 @@
     "Price":"مبلغ",
     "Payment date":"تاریخ پرداخت",
     "Payment ref id":"کدرهگیری پرداخت",
-    "Payment file":"رسید پرداخت"
+    "Payment file":"رسید پرداخت",
+    "enable": "فعال",
+    "Columns": "ستون ها"
 }
