--- a/packages/mkhodroo-agency-info/src/Lang/fa.json
+++ b/packages/mkhodroo-agency-info/src/Lang/fa.json
@@ -119,5 +119,8 @@
     "Payment ref id":"کدرهگیری پرداخت",
     "Payment file":"رسید پرداخت",
     "enable": "فعال",
-    "Columns": "ستون ها"
+    "Columns": "ستون ها",
+    "Everything":"هر چه میخواهد دل تنگت",
+    "Filter": "فیلتر"
+
 }
