--- a/packages/mkhodroo-agency-info/src/Lang/fa.json
+++ b/packages/mkhodroo-agency-info/src/Lang/fa.json
@@ -125,6 +125,7 @@
     "All":"همه",
     "High Pressure Agency":"مرکز خدمات فنی",
     "Low Pressure Agency":"مرکز کم فشار",
-    "Hidrostatic Laboratory":"آزمایشگاه هیدرواستاتیک"
+    "Hidrostatic Laboratory":"آزمایشگاه هیدرواستاتیک",
+    "Add New Agency": "افزودن مرکز جدید"
 
 }
