--- a/packages/hidro-registration/src/Lang/fa.json
+++ b/packages/hidro-registration/src/Lang/fa.json
@@ -6,6 +6,9 @@
     "Address":"آدرس",
     "Name":"نام",
     "simfaCode":"کدسیمفا",
+    "simfa code":"کد سیمفا",
+    "postal code":"کدپستی",
+    "legal national id":"شناسه ملی شرکت",
     "Waiting...": "منتظر بمانید...",
     "Authority Does Not Received.": "Authority دریافت نشد با پشتیبانی تماس بگیرید.",
     "Agency Does Not Found": "مرکز یافت نشد",
