--- a/packages/mkhodroo-agency-info/src/Lang/fa.json
+++ b/packages/mkhodroo-agency-info/src/Lang/fa.json
@@ -126,6 +126,15 @@
     "High Pressure Agency":"مرکز خدمات فنی",
     "Low Pressure Agency":"مرکز کم فشار",
     "Hidrostatic Laboratory":"آزمایشگاه هیدرواستاتیک",
-    "Add New Agency": "افزودن مرکز جدید"
+    "Add New Agency": "افزودن مرکز جدید",
+    "Error": "خطا",
+    "Cancel By User": "لغو شده توسط کاربر",
+    "Transaction Successful": "تراکنش موفق",
+    "Debt Payment For Agency With National ID:": "پرداخت بدهی برای مرکز با کدملی: ",
+    "Redirecting To Payment Page": "انتقال به صفحه پرداخت",
+    "You Have No Debt": "بدهی ندارید",
+    "No Agency Found With This Mobile Number": "مرکزی با این موبایل یافت نشد",
+    "No Agency Found With This National ID": "مرکزی با این کدملی یافت نشد",
+    "No Agency Found": "مرکزی یافت نشد"
 
 }
