national id translation

--- a/packages/user-profile/src/Lang/fa.json
+++ b/packages/user-profile/src/Lang/fa.json
@@ -8,5 +8,6 @@
     "code was sent recently": "کد قبلا ارسال شده است",
     "code is not valid": "کد نامعتبر است",
     "code was expired": "کد منقضی شده است",
-    "mobile verified": "موبایل تایید شد"
+    "mobile verified": "موبایل تایید شد",
+    "national_id": "کد ملی"
 }
