--- a/packages/behin-process-maker/src/Lang/fa/fa.json
+++ b/packages/behin-process-maker/src/Lang/fa/fa.json
@@ -85,6 +85,10 @@
     "Repairman": "تعمیرکار",
     "case": "پرونده",
     "Task": "مرحله",
-    "Process": "فرایند"
+    "Process": "فرایند",
+    "Repair Is Approved 2": "تعمیرات تایید است",
+    "Repair Declined Description 2": "توضیحات عدم تایید تعمیرات",
+    "Repair Is Approved 3": "تعمیرات مورد تایید است",
+    "Repair Declined Description 3": "توضیحات عدم تایید تعمیرات"
 
 }
