--- a/packages/mkhodroo-agency-info/src/Lang/fa.json
+++ b/packages/mkhodroo-agency-info/src/Lang/fa.json
@@ -175,6 +175,30 @@
     "city": "شهرستان",
     "guild_or_legal_name": "نام محل صنفی یا شرکت",
     "number of sended sms": "تعداد پیامک های ارسال شده",
-    "non_valid_": "(تایید نشده)"
-
+    "non_valid_": "(تایید نشده)",
+    "foreman_personal_image": "تصویر پرسنلی 3*4 مباشر",
+    "foreman_birth_certificate_image": "تصویر شناسنامه مباشر",
+    "foreman_national_card": "تصویر کارت ملی مباشر",
+    "foreman_military_card": "کارت پایان خدمت/معافیت/... مباشر",
+    "foreman_card": "کارت مباشرت",
+    "Partner Info": "اطلاعات شریک",
+    "partner_firstname": "نام شریک",
+    "partner_lastname": "نام خانوادگی شریک",
+    "partner_national_id": "کدملی شریک",
+    "partner_personal_image": "تصویر پرسنلی 3*4 شریک",
+    "partner_birth_certificate_image": "تصویر شناسنامه شریک",
+    "partner_national_card": "تصویر کارت ملی شریک",
+    "partner_mobile": "موبایل شریک",
+    "partner_military_card": "کارت پایان خدمت/معافیت/... شریک",
+    "last_request_date": "تاریخ آخرین درخواست",
+    "last_request_type": "نوع آخرین درخواست",
+    "person_type": "نوع شخص",
+    "brand_or_trademark_registration": "ثبت برند یا علائم تجاری",
+    "usage_certificate": "پروانه بهره برداری",
+    "board_of_directors_approval": "مصوبه هیئت مدیره",
+    "partners_satisfication": "رضایت نامه شرکا",
+    "official_newspaper": "روزنامه رسمی",
+    "last_changes_announcement": "آگهی آخرین تغییرات شرکت",
+    "legal_statute": "اساسنامه",
+    "Additional Docs": "مدارک تکمیلی"
 }
