tickets status fix

--- a/packages/altfuel-ticket/src/Lang/fa.json
+++ b/packages/altfuel-ticket/src/Lang/fa.json
@@ -6,5 +6,6 @@
     "Unfortunately Generated Code Is Not Unique. Contact Support": "کد تولید شده یکتا نیست. لطفا با پشتیبانی تماس بگیرید",
     "score set": "امتیاز ثبت شد",
     "access denied": "دسترسی برای ایجاد کامنت ندارید",
-    "change category access denied": "دسترسی برای تغییر دسته بندی ندارید"
+    "change category access denied": "دسترسی برای تغییر دسته بندی ندارید",
+    "change status access denied": "دسترسی برای تغییر وضعیت ندارید"
 }
